2007-09-26  Robert Schwebel <r.schwebel@pengutronix.de>

	* ntp: update NTP package to version 4.2.4p3. Adds options for
	rc.d links for the server and ntpdc plus configurations. Some
	missing /var directories for statistics files have also been
	added. Patch by Carsten Schlote.

2007-09-21  Bjoern Buerger <b.buerger@pengutronix.de>

	* less: added

2007-09-20  Robert Schwebel <r.schwebel@pengutronix.de>

	* libcgi: added; patch by Guillaume Gourat.

2007-07-26  Robert Schwebel <r.schwebel@pengutronix.de>

	* liboil: added; patch by Guillaume Gourat.

2007-05-05  Robert Schwebel <r.schwebel@pengutronix.de>

	* trunk: backports from 1.0.0-trunk 

2007-05-05  Robert Schwebel <r.schwebel@pengutronix.de>

	* release: released 1.0.0

2007-05-04  Robert Schwebel <r.schwebel@pengutronix.de>

	* figlet: fix output
	* db41: cleanup; patch by Randall Loomis
	* db41: fixed build issues with the patch above
	* sysfsutils: fixed install path for systool; patch by Jari
	Takkala
	* alsa-lib: resmgr support is broken, because it needs libresmgr
	* Rules.make: remove internal quotes in pkg-config path; patch
	by Jari Takkala

2007-05-04  Marc Kleine-Budde <m.kleine-budde@pengutronix.de>

	* apply_patch_series.sh: removed debug 
	* apply_patch_series.sh: be a bit more sane, don't fail on
	existing patches subdirs or series files
	
	* rules/pre/Rules.make: set PKG_CONFIG_PATH to nix, in HOST ENV
	prevent host stuff leak into our own stuff

2007-05-04  Juergen Beisert <j.beisert@pengutronix.de>

	* alsa-utils: consider new alsa-lib menu entries
	* alsa-lib: adding more menu entries and help for more specific
	configuration
	* utelnetd.make: Using correct packet name for user's startup script
	* u-boot.in: some help added

2007-05-04  Sascha Hauer <s.hauer@pengutronix.de>

	* kernel: do not use kernel-patches-target and
	kernel-patches-native anymore. The kernel patches are now placed
	under patches/linux-version like for every other package
