@@ -70,6 +70,7 @@ source "rules/pdksh.in"
 source "rules/procps.in"
 source "rules/screen.in"
 source "rules/setserial.in"
+source "rules/sudo.in"
 source "rules/sysfsutils.in"
 source "rules/sysutils.in"
 source "rules/util-linux.in"
@@ -260,7 +261,6 @@ source "rules/libIDL-2.in"
 source "rules/liboop.in"
 source "rules/paranoia.in"
 source "rules/qte.in"
-source "rules/sudo.in"
 source "rules/tinylogin.in"
 source "rules/xvkbd.in"
 endmenu
